--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,39 @@
         android:id="@+id/sceneform_fragment"
         android:name="com.google.ar.sceneform.ux.ArFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-    </fragment>
+
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/buttonsRow"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/buttonAdd2d"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:padding="16dp"
+            android:text="Add 2D" />
+
+        <Space
+            android:visibility="gone"
+            android:layout_width="48dp"
+            android:layout_height="1dp"/>
+
+        <Button
+            android:visibility="gone"
+            android:id="@+id/buttonAdd3d"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:padding="16dp"
+            android:text="Add 3D" />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
